--- a/index.html
+++ b/index.html
@@ -5,37 +5,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
+
   <body>
     <img class="image-gradient" src="gradient.png" alt="gradient" />
     <div class="layer-blur"></div>
     <div class="container">
       <header>
-        <h1 class="logo">Dela</h1>
+        <h1 data-aos="fade-down" data-aos-duration="1500" class="logo">Dela</h1>
         <nav>
-          <a href="#">EDUCATION</a>
-          <a href="#">PROJECTS</a>
-          <a href="#">TECHNICAL SKILLS</a>
-          <a href="#">CONTACT</a>
-          <button class="btn-signing">SIGNING</button>
+          <a data-aos="fade-down" data-aos-duration="1500" href="#"
+            >EDUCATION</a
+          >
+          <a data-aos="fade-down" data-aos-duration="2000" href="#">PROJECTS</a>
+          <a data-aos="fade-down" data-aos-duration="2500" href="#"
+            >TECHNICAL SKILLS</a
+          >
+          <a data-aos="fade-down" data-aos-duration="3000" href="#">CONTACT</a>
+          <button
+            data-aos="fade-down"
+            data-aos-duration="1500"
+            class="btn-signing"
+          >
+            SIGNING
+          </button>
         </nav>
       </header>
       <main>
         <div class="content">
-          <div class="tag-box">
+          <div
+            data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="300"
+            data-aos-offset="0"
+            data-aos-duration="1500"
+            class="tag-box"
+          >
             <div class="tag">INTRUCTING &wedbar;</div>
           </div>
-          <h1>ENAIL FOR<br />DEVELOPERS</h1>
-          <p class="description">
+          <h1
+            data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="300"
+            data-aos-offset="0"
+            data-aos-duration="2000"
+          >
+            ENAIL FOR<br />DEVELOPERS
+          </h1>
+          <p
+            data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="300"
+            data-aos-offset="0"
+            data-aos-duration="2500"
+            class="description"
+          >
             the best way to reach uumans instead of spam folders,dlever
             trasnctional and marketing emails at scale.
           </p>
-          <div class="buttons">
+          <div
+            data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="300"
+            data-aos-offset="0"
+            data-aos-duration="3000"
+            class="buttons"
+          >
             <a href="#" class="btn-get-started">Documentations &gt;</a>
             <a href="#" class="btn-signing-main">Getstarted &gt;</a>
           </div>
         </div>
       </main>
+      <spline-viewer
+        data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="300"
+        data-aos-offset="0"
+        data-aos-duration="3000"
+        class="robot-3d"
+        url="https://prod.spline.design/yyf5truauL1jk50w/scene.splinecode"
+      ></spline-viewer>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/@splinetool/viewer@1.9.94/build/spline-viewer.js"
+    ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
